learned difference between blocking and inline elements and fixed social button display problems; changed navbar page-scrolls on mobile to display with text not jammed up to the right again

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -53,22 +53,14 @@ p {
 	font-size: 110%;
 }
 
-a,
-a:hover,
-a:focus,
-a:active,
-a.active {
-	outline: 0;
-}
-
 a {
+	outline: 0;
 	color: #{{ site.color.primary }};
 }
 
 a:hover,
 a:focus,
-a:active,
-a.active {
+a:active {
 	color: #{{ site.color.secondary }};
 	text-decoration: none; /* no underlining links */
 }
@@ -163,7 +155,6 @@ h6 {
 
 @media(max-width: 768px) {
 	.page-scroll {
-		padding-right: 0px;
 		margin-left: 10px;
 		font-size: 12px;
 	}
@@ -602,19 +593,19 @@ footer ul.quicklinks {
 }
 
 .social-buttons {
-	float: left;
-	margin-top: 0px;
 	margin-bottom: 0px;
 }
 
-ul.social-buttons li a {
-	display: block;
+.social-buttons li a {
+	display: table-cell;
+	vertical-align: middle;/*"Note that vertical-align only applies to
+	inline and table-cell elements: you can't use it to vertically align
+	block-level elements."*/
 	text-align: center;
+	font-size: 20px;
 	width: 40px;
 	height: 40px;
 	border-radius: 100%;
-	font-size: 20px;
-	line-height: 40px;
 	outline: 0;
 	color: #fff;
 	transition: all .3s;
@@ -630,7 +621,6 @@ ul.social-buttons li a:hover {
 		width: 35px;
 		height: 35px;
 		font-size: 18px;
-		line-height: 35px;
 		margin-right: -7px;
 	}
 }
